# CameraModel

./: .gitignore  CMakeLists.txt  README.md  make.sh  run.sh
include/: MEI_camera.hpp  abstract_camera.hpp  pinhole_camera.hpp
src/: MEI_camera.cpp  abstract_camera.cpp  pinhole_camera.cpp
test/: remove_distort.cpp
